@@ -47,8 +47,8 @@ Toggle play/pause; plays if stopped
 .B repeat
 Toggle repeat mode
 .TP
-.B shuffle
-Toggle shuffle mode
+.B random
+Toggle random mode
 .TP
 .B info
 Display current song info
